# parcel

./: Cargo.toml  package.json
.github/workflows/: ci.yml
crates/html/: Cargo.toml
crates/html/src/: arena.rs  dependencies.rs  lib.rs  optimize.rs  oxvg.rs  package.rs  serialize.rs  srcset.rs
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: html.rs  lib.rs
crates/parcel-resolver/: Cargo.toml
crates/parcel-resolver/src/: cache.rs  fs.rs  lib.rs  package_json.rs
