[workspace]
resolver = "2"
members = [
  "crates/*",
  "packages/transformers/js/core"
]

[profile.canary]
inherits = "release"
debug = true

[patch.crates-io]
html5ever = { git = "https://github.com/devongovett/html5ever.git", branch = "xmlns-attrs" }
xml5ever = { git = "https://github.com/devongovett/html5ever.git", branch = "xmlns-attrs" }
markup5ever = { git = "https://github.com/devongovett/html5ever.git", branch = "xmlns-attrs" }
markup5ever_rcdom = { git = "https://github.com/devongovett/html5ever.git", branch = "xmlns-attrs" }
